--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "three-gcode-loader",
   "version": "1.0.2",
-  "description": "THREE.GCodeLoader repackaged as a node module",
+  "description": "THREE.GCodeLoader repackaged as a node module, with request header and credentials support",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
