Splitting up Three imports to enable tree shaking

--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   "homepage": "https://github.com/penneydude/three-gcode-loader#readme",
   "peerDependencies": {
     "three": ">= 0.101.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.3"
   }
 }
